fix spacing (#148)
Why:
* Spacing was not matching the design.

How:
* Adjusted spacing to match design

--- a/frontend/src/components/Forms/PolicyForm/index.module.scss
+++ b/frontend/src/components/Forms/PolicyForm/index.module.scss
@@ -3,7 +3,7 @@
 }
 
 .headingWrapper {
-  margin-bottom: 104px;
+  margin-bottom: 110px;
   text-align: center;
 }
 
